--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-size: calc(10px + 2vmin);
+  color: #006400; /* Dark green text */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  background-color: #f5f5dc; /* Cream background */
 }
 
-.App-link {
-  color: #61dafb;
+.search-container {
+  width: 100%;
+  max-width: 500px; /* Adjust width as needed */
+  position: relative; /* For positioning the suggestions */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px;
+  margin-bottom: 20px;
 }
+
+.logo {
+  height: auto;
+  margin-right: 10px;
+}
+
+.company-name {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #006400;
+  margin-bottom: 0;
+  user-select: none; /* Prevents text selection */
+}
+
+.search-bar {
+  position: relative;
+  display: flex;
+  align-items: center;
+  border: 2px solid #8FBC8F; /* Light green border */
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.search-input {
+  padding: 10px;
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 1em;
+}
+
+.suggestions {
+  position: absolute;
+  width: 100%;
+  background: #fff;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 4px 4px;
+}
+
+.suggestions li {
+  padding: 8px 12px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.suggestions li:hover {
+  background-color: #f5f5dc;
+}
+
+.suggestions li.active {
+  background-color: #8FBC8F;
+  color: #fff;
+}
+
+.static-suggestions {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.static-suggestions li {
+  flex-basis: calc(33% - 10px);
+  margin-bottom: 10px;
+  background-color: #fff;
+  padding: 8px 12px;
+  border-radius: 4px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+.static-suggestions li:hover {
+  background-color: #f5f5dc;
+}
+
